Fixed alpha box overflowing

--- a/app/assets/stylesheets/website.css.scss
+++ b/app/assets/stylesheets/website.css.scss
@@ -44,14 +44,14 @@ body.website.alpha {
   }
 
   .signup {
-    height: 170px;
+    height: 180px;
   }
 
   .row.no-invite {
     margin-top: 10px; 
     
     .notrdy {
-      height: 80px !important;
+      height: 110px !important;
     }
   }
 
